# CS1400-Biblioteca

./: diario.txt
Digipet/: Digipet.py
M10/: clases.py  diario.py
M11/: README.md  main.py  markov.py  utils.py
M6/: 1minutos.py  2precio_cine.py  3gpa.py  4concatenacion.py
M7/: 1funcion.py  2funcion.py  3mitortuga.py  4turtle.py  jugar.py
M9/: gestion_tienda.py  main.py
m5/: comida.py
mago_meteorologico_m12/: .gitignore  README.md  pyproject.toml
mago_meteorologico_m12/src/: config.py  excepciones.py
mago_meteorologico_m12/src/weather_wizard/: __init__.py  api.py  main.py  motor.py  utils.py
mago_meteorologico_m12/tests/: test_logic.py
modulo5/ejercicio1_boolean/: codigo1.py
modulo5/ejercicio2_cuadrado/: codigo2.py
