[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather_wizard"
version = "0.1.0"
description = "Una API de clima educativa para estudiantes de Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Tu Nombre", email = "tu@email.com"}
]
keywords = ["clima", "api", "educacion", "tutorial"]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]